--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "storeloop",
-  "version": "1.0.0",
-  "description": "StoreLoop e-commerce application",
+  "version": "0.1.0",
+  "description": "Django-based e-commerce platform with multi-seller and theme support",
   "scripts": {
-    "build": "tailwindcss -i ./themestaticsrc/input.css -o ./staticcss/output.css",
-    "watch": "tailwindcss -i ./themestaticsrc/input.css -o ./staticcss/output.css --watch"
+    "build": "tailwindcss -i ./themestaticsrc/base.css -o ./staticcss/output.css --minify",
+    "dev": "tailwindcss -i ./themestaticsrc/base.css -o ./staticcss/output.css --watch"
   },
   "dependencies": {
-    "tailwindcss": "^3.0.24"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "tailwindcss": "^3.3.2"
   }
 }
