--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,15 @@
 # Django settings
-DEBUG=False
 SECRET_KEY=your-secret-key-here
-ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database settings
 DB_NAME=storeloop
-DB_USER=storeloop_user
-DB_PASSWORD=your-db-password
-DB_HOST=db
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
 DB_PORT=5432
 
 # Razorpay settings
 RAZORPAY_KEY_ID=your-razorpay-key-id
 RAZORPAY_KEY_SECRET=your-razorpay-key-secret
-
-# Email settings
-EMAIL_HOST=smtp.example.com
-EMAIL_PORT=587
-EMAIL_HOST_USER=your-email@example.com
-EMAIL_HOST_PASSWORD=your-email-password
-EMAIL_USE_TLS=True
-
-# Security settings
-CSRF_TRUSTED_ORIGINS=https://yourdomain.com
-SECURE_SSL_REDIRECT=True
-SESSION_COOKIE_SECURE=True
-CSRF_COOKIE_SECURE=True
