feat: onboarding winzard, seller dashboard, CSV/Excel import

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,32 @@
-# Django settings
-SECRET_KEY=your-secret-key-here
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
-
 # Database settings
 DB_NAME=storeloop
 DB_USER=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=your_password
 DB_HOST=localhost
 DB_PORT=5432
 
+# Redis settings
+REDIS_URL=redis://localhost:6379/0
+
+# Django settings
+SECRET_KEY=your-secret-key-here
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1,.storeloop.in
+
 # Razorpay settings
-RAZORPAY_KEY_ID=your-razorpay-key-id
-RAZORPAY_KEY_SECRET=your-razorpay-key-secret
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+
+# AI API settings (optional)
+OPENROUTER_API_KEY=your_openrouter_api_key
+GROQ_API_KEY=your_groq_api_key
+
+# WhatsApp settings - Twilio (optional)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
+TWILIO_WHATSAPP_ENABLED=false
+
+# WhatsApp settings - Gupshup (alternative to Twilio)
+GUPSHUP_API_KEY=your_gupshup_api_key
+GUPSHUP_SOURCE_NUMBER=your_gupshup_source_number
