--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-Django>=4.2.0,<5.0.0
-Pillow>=10.0.0
-razorpay>=1.3.0
-segno>=1.5.2
-python-dotenv>=1.0.0
-django-tailwind>=3.6.0
-pytest-django>=4.5.2
-psycopg2-binary>=2.9.5
-dj-database-url>=1.0.0
+Django==4.2.7
+djangorestframework==3.14.0
+psycopg2-binary==2.9.7
+celery==5.3.4
+redis==5.0.1
+pandas==2.1.3
+openpyxl==3.1.2
+WeasyPrint==60.2
+requests==2.31.0
+Pillow==10.1.0
+python-decouple==3.8
+twilio==8.10.0
+gunicorn==21.2.0
+whitenoise==6.6.0
