--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,5 @@ tests/playwright/screenshots/
 tests/playwright/videos/
 tests/playwright/traces/
 
-# Personal files (not for repo)
-INTERVIEW_PREP.md
-MANUAL_TEST_SCRIPT.md
-StoreLoop-LOOM_SCRIPT.md
+# Internal documentation (not for public repo)
+internal/
