--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,21 @@ djangorestframework==3.14.0
 psycopg2-binary==2.9.7
 celery==5.3.4
 redis==5.0.1
+# Note: Install numpy and pandas separately with --only-binary=all on Windows
+numpy==1.26.4
 pandas==2.1.3
 openpyxl==3.1.2
-WeasyPrint==60.2
+# WeasyPrint==60.2  # Requires GTK on Windows - use reportlab instead
+reportlab==4.0.7
 requests==2.31.0
 Pillow==10.1.0
 python-decouple==3.8
+python-dotenv==1.0.0
+django-tailwind==3.6.0
 twilio==8.10.0
-gunicorn==21.2.0
+razorpay==1.4.2
+qrcode==7.4.2
+django-cors-headers==4.3.1
+# gunicorn==21.2.0  # Linux/Mac only - use waitress on Windows
+waitress==2.1.2  # Cross-platform WSGI server
 whitenoise==6.6.0
