--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ tests/node_modules/
 tests/package-lock.json
 
 # Internal documentation (not for public repo)
-internal/
+storeloop-internal/
 
 # New Playwright test results
 tests/playwright-report/
